markdown/data-relational/4.1.0/_index.md
# data-relational 4.1.0

54 pages, converted from upstream Spring AsciiDoc.

- [commons/criteria-methods](./commons/criteria-methods.md)
- [commons/custom-conversions](./commons/custom-conversions.md)
- [commons/entity-callbacks](./commons/entity-callbacks.md)
- [commons/upgrade](./commons/upgrade.md)
- [index](./index.md)
- [jdbc](./jdbc.md)
- [jdbc/aot](./jdbc/aot.md)
- [jdbc/auditing](./jdbc/auditing.md)
- [jdbc/domain-driven-design](./jdbc/domain-driven-design.md)
- [jdbc/entity-persistence](./jdbc/entity-persistence.md)
- [jdbc/events](./jdbc/events.md)
- [jdbc/getting-started](./jdbc/getting-started.md)
- [jdbc/mapping](./jdbc/mapping.md)
- [jdbc/mybatis](./jdbc/mybatis.md)
- [jdbc/property-paths](./jdbc/property-paths.md)
- [jdbc/query-methods](./jdbc/query-methods.md)
- [jdbc/schema-support](./jdbc/schema-support.md)
- [jdbc/sequences](./jdbc/sequences.md)
- [jdbc/transactions](./jdbc/transactions.md)
- [jdbc/why](./jdbc/why.md)
- [kotlin](./kotlin.md)
- [kotlin/coroutines](./kotlin/coroutines.md)
- [kotlin/extensions](./kotlin/extensions.md)
- [kotlin/null-safety](./kotlin/null-safety.md)
- [kotlin/object-mapping](./kotlin/object-mapping.md)
- [kotlin/requirements](./kotlin/requirements.md)
- [object-mapping](./object-mapping.md)
- [query-by-example](./query-by-example.md)
- [r2dbc](./r2dbc.md)
- [r2dbc/auditing](./r2dbc/auditing.md)
- [r2dbc/entity-callbacks](./r2dbc/entity-callbacks.md)
- [r2dbc/entity-persistence](./r2dbc/entity-persistence.md)
- [r2dbc/getting-started](./r2dbc/getting-started.md)
- [r2dbc/kotlin](./r2dbc/kotlin.md)
- [r2dbc/mapping](./r2dbc/mapping.md)
- [r2dbc/migration-guide](./r2dbc/migration-guide.md)
- [r2dbc/property-paths](./r2dbc/property-paths.md)
- [r2dbc/query-methods](./r2dbc/query-methods.md)
- [r2dbc/repositories](./r2dbc/repositories.md)
- [r2dbc/sequences](./r2dbc/sequences.md)
- [repositories/auditing](./repositories/auditing.md)
- [repositories/core-concepts](./repositories/core-concepts.md)
- [repositories/core-domain-events](./repositories/core-domain-events.md)
- [repositories/core-extensions](./repositories/core-extensions.md)
- [repositories/create-instances](./repositories/create-instances.md)
- [repositories/custom-implementations](./repositories/custom-implementations.md)
- [repositories/definition](./repositories/definition.md)
- [repositories/introduction](./repositories/introduction.md)
- [repositories/null-handling](./repositories/null-handling.md)
- [repositories/projections](./repositories/projections.md)
- [repositories/query-keywords-reference](./repositories/query-keywords-reference.md)
- [repositories/query-methods-details](./repositories/query-methods-details.md)
- [repositories/query-return-types-reference](./repositories/query-return-types-reference.md)
- [value-expressions](./value-expressions.md)
